--- a/cadastro/forms.html
+++ b/cadastro/forms.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="forms.css"> <!--Importando o forms.css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="barraNavegacao.css"> <!--Importando o CSS da barra de navegação-->
+    <link rel="stylesheet" href="login.css"> <!--Importando o CSS do formulário de login-->
     <title>Login</title>
 </head>
 <body>
@@ -12,7 +14,7 @@
         <header>
             <nav class="nav-bar">
                 <div class="logo">
-                    <img id="logo" src="logo.png" width="50" height="50" alt="LogoEmpresa">
+                    <img id="logo" src="img/logo.png" width="50" height="50" alt="LogoEmpresa">
                 </div>
 
                 <div>
@@ -23,8 +25,8 @@
                     </div>
                 </div>
 
-                <div class="mobile-menu-icon"> <!--Criando o modelo responsivo do menu para a barra de navegação-->
-                    <button onclick="menuShow()"><img class="icon" src="menu_white_36dp.svg"></button>
+                <div class="mobile-menu-icon"> <!--Criando o modelo responsivo do menu para a barra de navegação utilizando js-->
+                    <button onclick="menuShow()"><img class="icon" src="img/menu-atalho.svg"></button>
                 </div>
             </nav>  
             <div class="mobile-menu">
@@ -35,6 +37,65 @@
                 </ul>
             </div>     
         </header>
+        <main id="container"> <!--Iniciando o formulário de login-->
+            <form id="login_form">
+                <div id="form_header">
+                    <h1>Login</h1>
+                    <i id="mode_icon" class="fa-solid fa-moon"></i>
+                </div>
+
+                <div id="social_media">
+                    <a href="#">
+                        <img src="img/facebook.png" alt="Facebook Logo">
+                    </a>
+                    <a href="#">
+                        <img src="img/google.png" alt="Google Logo">
+                    </a>
+                </div>
+
+                <div id="inputs">
+                    <div class="input-box">
+                        <label for="name">
+                            Nome
+                            <div class="input-field">
+                                <i class="fa-solid fa-user"></i>
+                                <input type="name" name="name" id="name">
+                            </div>
+                        </label>
+                    </div>
+
+                    <div class="input-box">
+                        <label for="email">
+                            E-mail
+                            <div class="input-field">
+                                <i class="fa-solid fa-envelope"></i>
+                                <input type="email" name="email" id="email">
+                            </div>
+                        </label>
+                    </div>
+
+                    <div class="input-box">
+                        <label for="password">
+                            Senha
+                            <div class="input-field">
+                                <i class="fa-solid fa-key"></i>
+                                <input type="password" name="password" id="password">
+                            </div>
+                        </label>
+
+                        <div id="forgot_password">
+                            <a href="#">
+                                Esqueceu sua senha?
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <button type="submit" id="login_button">
+                    Acessar
+                </button>
+            </form>
+        </main>
     <script src="script.js"></script>
 </body>
 </html>        
